# rust-terminfo

./: Cargo.toml  README.md  build.rs
examples/: parse.rs  set_attributes.rs  simple.rs
src/: capability.rs  database.rs  error.rs  expand.rs  lib.rs  names.rs
src/parser/: compiled.rs  expansion.rs  mod.rs  source.rs  terminfo.rs  util.rs
tests/: parser.rs
