[package]
name    = "terminfo"
version = "0.6.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Terminal information."
repository  = "https://github.com/meh/rust-terminfo"
keywords    = ["terminal", "terminfo", "termcap", "term"]
categories  = ["command-line-interface"]

build = "build.rs"

[dependencies]
nom = "5.0"
phf = "0.7"
fnv = "1.0"

[build-dependencies]
phf_codegen = "0.7"
