[package]
name    = "terminfo"
version = "0.7.1"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Terminal information."
repository  = "https://github.com/meh/rust-terminfo"
keywords    = ["terminal", "terminfo", "termcap", "term"]
categories  = ["command-line-interface"]

build = "build.rs"

[dependencies]
dirs = "2"
nom = "5.0"
phf = "0.8"
fnv = "1.0"

[build-dependencies]
phf_codegen = "0.8"
